# PJSyncHub

./: .gitattributes  .gitignore  README.md  docker-compose.yml
_docs/developer/details/: what-is-graphql.md
backend/: Cargo.toml  Dockerfile
backend/src/: error.rs  main.rs  schema.rs
backend/src/configs/: database.rs  env.rs  mod.rs  storage.rs
backend/src/handlers/: graphql.rs  mod.rs
backend/src/migrations/: m001_create_user.rs  mod.rs
backend/src/models/: mod.rs
backend/src/models/content_db/: document.rs
backend/src/models/db/: user.rs
backend/src/models/document_db/: document.rs
backend/src/models/relational_db/: user.rs
backend/src/routes/: users.rs
backend/src/schemas/: mod.rs
backend/src/schemas/content_db/: document.rs  mod.rs
backend/src/schemas/db/: user.rs
backend/src/schemas/document_db/: document.rs
backend/src/schemas/relational_db/: mod.rs  user.rs
backend/src/schemas/relational_db/user/: mod.rs  mutation.rs  query.rs  types.rs
backend/src/utils/: auth.rs  mod.rs
backend/src/utils/validation/: errors.rs  mod.rs  rules.rs  validator.rs
frontend/: Dockerfile  codegen.yml  next.config.ts  package.json
frontend/messages/: en.json  ja.json
frontend/src/: auth.ts  middleware.ts
frontend/src/app/: globals.css
frontend/src/app/[locale]/: index.module.scss  layout.tsx  page.tsx
frontend/src/app/[locale]/dashboard/: layout.tsx  page.tsx
frontend/src/app/[locale]/signup/: layout.tsx  page.tsx
frontend/src/app/_actions/: auth.ts
frontend/src/components/common/: index.ts
frontend/src/components/common/Button/: Button.module.scss  Button.tsx
frontend/src/components/common/Input/: Input.module.scss  Input.tsx
frontend/src/components/common/Label/: Label.module.scss  Label.tsx  index.ts
frontend/src/components/common/Router/: Router.tsx  index.ts
frontend/src/components/common/Text/: Text.module.scss  Text.tsx
frontend/src/constants/: auth.ts  i18n.ts  index.ts  meta.ts  navigate.ts
frontend/src/graphql/: auth.ts  index.ts
frontend/src/graphql/mutations/: auth.ts
frontend/src/graphql/types/: action.type.ts
frontend/src/graphql/utils/: client.util.ts
frontend/src/hooks/auth/: index.ts  useFormValidation.ts  useLogin.ts  useSignup.ts  useUser.ts
frontend/src/i18n/: request.ts  routing.ts
frontend/src/lib/: apollo-client.ts
frontend/src/lib/actions/: auth.ts
frontend/src/lib/types/: next-auth.d.ts
frontend/src/types/: auth.type.ts  auth.types.ts  index.ts  next-auth.d.ts  props.type.ts  validation.type.ts
frontend/src/types/models/: index.ts  user.model.ts
frontend/src/utils/: index.ts  metadata.util.ts
graphql/mutations/: create_test_user.graphql  login_test_user.graphql
graphql/queries/: get_all_user.graphql
graphql/sql/: delete_user_records.sql
sql/insert/: test_user.sql
(+32 files in other folders)
