[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.35", features = ["full", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
async-graphql = "6.0"
async-graphql-axum = "6.0"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls"] }
mongodb = "2.8" 