[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.35", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2.0.12"
async-graphql = { version = "7.0.15", features = ["uuid", "chrono"] }
async-graphql-axum = "7.0.15"
sqlx = { version = "0.8.3", features = [
    "postgres",
    "runtime-tokio-native-tls",
] }
mongodb = "3.0.0"
sea-orm = { version = "1.1.7", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
] }
sea-orm-migration = { version = "1.1.7", features = [
    "runtime-tokio-native-tls",
    "sqlx-postgres",
] }
home = "0.5.9"
dotenvy = "0.15"
urlencoding = "2.1.3"
percent-encoding = "2.3.1"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
aws-sdk-s3 = "1.6.0"
aws-config = "1.6.0"
futures = "0.3"
base64 = "0.22.1"
jsonwebtoken = "9.2"
chrono = { version = "0.4", features = ["serde"] }
argon2 = { version = "0.5", features = ["std"] }
rand_core = { version = "0.9.3", features = ["std"] }
regex = "1.5"
once_cell = "1.8"
